--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <div id="svgObject"></div>
         
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="scripts/jquery-1.11.2.min.js"><\/script>')</script>
+        <script src="scripts/jquery.svg.min.js"></script>
         <script src="scripts/default.js"></script>
 
         <!-- Google Analytics -->
