--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <link rel="stylesheet" href="styles/default.css">
         
     </head>
-    <body>
+    <body class="hidden">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="svgObject"></div>
+        <div class="info"></div>
         
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="scripts/jquery-1.11.2.min.js"><\/script>')</script>
