--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-
+        <link rel="stylesheet" href="styles/normalize.css">
+        <link rel="stylesheet" href="styles/default.css">
         
     </head>
     <body class="hidden">
