--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <script>window.jQuery || document.write('<script src="scripts/jquery.min.js"><\/script>')</script>
       
       <script src="scripts/jquery.svg.min.js"></script>
-      <script src="scripts/main.js"></script>
+      <script src="scripts/main2.js"></script>
 
       <!-- Google Analytics -->
       <script>
