--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
 
     </head>
@@ -24,14 +25,27 @@
       <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-      <div id="svgObject"></div>
+      <a href="#svgBase64" data-toggle="modal">
+        <div id="svgObject"></div>
+      </a>
       <div class="info"></div>
+      <div class="modal fade" id="svgBase64" tabindex="-1" role="dialog" aria-labelledby="svgBase64">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body">...</div>
+          </div>
+        </div>
+      </div>
 
       <!-- jQuery -->
       <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script>window.jQuery || document.write('<script src="scripts/jquery.min.js"><\/script>')</script>
-      
+
       <script src="scripts/jquery.svg.min.js"></script>
+      <script src="scripts/bootstrap.min.js"></script>
       <script src="scripts/main2.js"></script>
 
       <!-- Google Analytics -->
