--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
@@ -25,35 +24,29 @@
       <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-      <a href="#svgBase64" data-toggle="modal">
+      <a href="#modal" data-toggle="modal">
         <div id="svgObject"></div>
       </a>
       <div class="info"></div>
-      <div class="modal fade" id="svgBase64" tabindex="-1" role="dialog" aria-labelledby="svgBase64">
+      <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
-            <div class="modal-body">...</div>
+            <div class="modal-body">
+              <p class="color-info"></p>
+              <samp class="base-64"></samp>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- jQuery -->
       <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script>window.jQuery || document.write('<script src="scripts/jquery.min.js"><\/script>')</script>
-
       <script src="scripts/jquery.svg.min.js"></script>
       <script src="scripts/bootstrap.min.js"></script>
-      <script src="scripts/main2.js"></script>
-
-      <script>
-        var s = new XMLSerializer().serializeToString(document.getElementsByTagName('svg') [0]);
-        var encodedData = window.btoa(s);
-
-        $('#svgBase64 .modal-body').text('data:image/svg+xml;base64,' + encodedData);
-      </script>
+      <script src="scripts/main.js"></script>
 
       <!-- Google Analytics -->
       <script>
