--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="modal-body">
               <p class="color-info"></p>
-              <samp class="base-64"></samp>
+              <p class="base-64"></p>
             </div>
           </div>
         </div>
